--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,11 @@
 body {
-  /* background: rgb(89, 150, 201); */
-  background-color: rgba(11, 11, 224, 0.795);
+  background-color: rgba(11, 11, 224, 0.700);
   font: normal 12pt Arial;
 }
 
 h1 {
   text-align: center;
+  font-size: 2.em;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.507);
 }
 
@@ -19,7 +19,6 @@ section {
 }
 
 .calculadora {
-  width: 400px;
   margin: auto;
 }
 
@@ -55,4 +54,10 @@ section {
 
 .btn-clear:hover, .btn-eq:hover {
     background-color: rgb(233, 54, 54);
+}
+
+@media (max-width: 550px) {
+  section {
+    width: 60%;
+  }
 }
